ValueBitNot is wrong in FTL with AnyBigIntUse https://bugs.webkit.org/show_bug.cgi?id=210846

Reviewed by Yusuke Suzuki.

JSTests:

* stress/big-int-value-bit-not-spec-any-big-int.js: Added.
(assert):
(foo):

Source/JavaScriptCore:

We forgot to speculate.

* ftl/FTLLowerDFGToB3.cpp:
(JSC::FTL::DFG::LowerDFGToB3::compileValueBitNot):


Canonical link: https://commits.webkit.org/223752@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260517 268f45cc-cd09-0410-ab3c-d52691b4dbfc